--- a/template/index.html
+++ b/template/index.html
@@ -21,17 +21,17 @@
                 </div>
                 <div class="row mt-4">
                     <div class="col-lg-4 col-12">
-                        <img src="img/space-square.png" alt="Faciales" class="caribe-experiencias-promotion">
+                        <img src="img/xcaret.png" alt="Faciales" class="caribe-experiencias-promotion">
                         <h3 class="my-4 pb-2">Xcaret</h3>
                         <a href="#callToAction" class="caribe-experiencias-cta my-4">Cotizar</a>
                     </div>
                     <div class="col-lg-4 col-12">
-                        <img src="img/space-square.png" alt="Masajes" class="caribe-experiencias-promotion">
+                        <img src="img/xelha.png" alt="Masajes" class="caribe-experiencias-promotion">
                         <h3 class="my-4 pb-2">Xelha</h3>
                         <a href="#callToAction" class="caribe-experiencias-cta my-4">Cotizar</a>
                     </div>
                     <div class="col-lg-4 col-12">
-                        <img src="img/space-square.png" alt="Paquetes" class="caribe-experiencias-promotion">
+                        <img src="img/chichenitza.png" alt="Paquetes" class="caribe-experiencias-promotion">
                         <h3 class="my-4 pb-2">Chichén</h3>
                         <a href="#callToAction" class="caribe-experiencias-cta my-4">Cotizar</a>
                     </div>
@@ -46,7 +46,7 @@
                     <p>Somos una empresa de transporte privado en el hermoso <span>Caribe Mexicano.</span><br class="d-none d-md-block"> Estamos comprometidos en ofrecer un servicio de alta calidad, para que tu <br class="d-none d-md-block">viaje sea seguro y cómodo. <br class="d-none d-md-block"><span>¡Tu transporte al paraíso!</span></p>
                 </div>
                 <div class="col-lg-6 col-12">
-                    <img src="img/space-square.png" alt="Logo Spa" class="caribe-nosotros-logo">
+                    <img src="img/sobre-nosotros.png" alt="Logo Spa" class="caribe-nosotros-logo">
                 </div>
             </div>
         </div>
@@ -229,8 +229,6 @@
                 </div>
             </div>
         </div>
-
-
 
         <script src="https://kit.fontawesome.com/1f05037efb.js"></script>
         <script src="js/bootstrap.bundle.min.js"></script>
