--- a/template/index.html
+++ b/template/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-        <title>Spaces</title>
+        <title>Caribe Nut Transportadora</title>
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/caribenut.css">
         <link rel="stylesheet" href="css/owl.carousel.min.css">
