--- a/css/caribenut.css
+++ b/css/caribenut.css
@@ -14,6 +14,7 @@ body {
 
 /* Caribe Navegacion */
 .caribe-navegacion {
+    transition: all 0.5s;
     background-color: #fff;
     padding: 30px 0px;
     width: 100%;
@@ -48,6 +49,7 @@ body {
 /* Caribe Motor */
 .caribe-motor {
     background: url('../img/caribe-nut-fondo.png');
+    background-size: cover;
 }
 .caribe-motor .caribe-logotipo {
     max-width: 200px;
